cargo-features = ["edition2024"]

[package]
edition = "2024"
license = "MIT"
name = "blueshift_native_amm"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "blueshift_native_amm"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true # AMM 项目强烈建议开启溢出检查
panic = "abort"

[dependencies]
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve", version = "0.1.0" }
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
